# openenv-email-env

./: README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py
env/: environment.py  models.py  tasks.py
server/: app.py
