[project]
name = "openenv-email-env"
version = "0.1.0"
description = "Email environment for OpenEnv"
requires-python = ">=3.9"

dependencies = [
    "fastapi",
    "uvicorn",
    "openenv>=0.2.0"
]

[project.scripts]
server = "server.app:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"